[package]
name = "ask"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ask"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
atty = "0.2"
dirs = "6.0.0"

[dev-dependencies]
mockito = "1"
